:bug: Fix grid module flex overflow

--- a/framework-plugins/lisk-framework-dashboard-plugin/src/ui/components/Grid/Grid.module.scss
+++ b/framework-plugins/lisk-framework-dashboard-plugin/src/ui/components/Grid/Grid.module.scss
@@ -17,6 +17,7 @@ $flex-align-items: 'flex-start', 'center', 'flex-end', 'stretch', 'baseline';
 		@for $i from 1 through $grid-cols {
 			.gridCol-#{$modifier}-#{$i} {
 				flex-basis: (100 / ($grid-cols / $i)) * 1%;
+				overflow: auto;
 			}
 			.gridCol-#{$modifier}-offset-#{$i} {
 				margin-left: (100 / ($grid-cols / $i)) * 1%;
